<resources>
    <string name="app_name">My Outdoor Agent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">731757434802651</string>
    <string name="fb_login_protocol_scheme">fb731757434802651</string>
    <string name="facebook_client_token">5016cc825136c840cc3fb67117cb4d97</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_plan">Change Plan</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="or_login_with">Or Login with</string>
    <string name="johnsmith154_gmail_com">johnsmith154@gmail.com</string>
    <string name="stars">**************</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="williams">Williams</string>
    <string name="smith">Smith</string>
    <string name="williamsmith154_gmail_com">williamsmith154@gmail.com</string>
    <string name="i_agree_with_all_terms_conditions"><![CDATA[I Agree with all Terms & conditions]]></string>
    <string name="enter_your_email_for_the_verification_process">Enter your email for the verification process</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="pre_approval_rquest">Pre-Approval Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="william">William</string>
    <string name="welcome_to_my_outdoor_agent">Welcome to My Outdoor Agent</string>
    <string name="contact_us">Contact Us</string>
    <string name="maximize_your_land">Maximize your land\'s potential</string>
    <string name="be_your_own_land_agent">Be your own land agent</string>
    <string name="land_owners">Landowner</string>
    <string name="list_your_land"><b><font color="#FF000000">1. List your land :</font></b> Make it available &amp; searchable to qualified users nationwide</string>
    <string name="customize"><b><font color="#FF000000">2. Customize :</font></b> Include specific amentities, set lease dates &amp; pricing</string>
    <string name="manage"><b><font color="#FF000000">3. Manage :</font></b> Confirm reservations, send secure payments online.</string>
    <string name="adventure_seekers">Adventure Seeker</string>
    <string name="my_account">My Account</string>
    <string name="my_licences">My Licences</string>
    <string name="pre_approval">Pre-Approval</string>
    <string name="help">Help</string>
    <string name="account_settings">Account Settings</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="log_out">Log Out</string>
    <string name="choose_responses">Choose\n one of the above responses</string>
    <string name="looking_for_properties">Looking for properties</string>
    <string name="leasing_properties">Leasing properties</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="following_information">Complete The Following Information</string>
    <string name="submit">Submit</string>
    <string name="save_and_contiune">Save And Continue</string>
    <string name="contiune">Continue</string>
    <string name="harvest_information">Harvest Information</string>
    <string name="contract_agreement">Contract Agreement</string>
    <string name="previous_members">Previous Members</string>
    <string name="Note">Note:  All fields are required, enter 0 if nothing havested</string>
    <string name="enter_your_harvest_information">Please enter your harvest information from previous hunting season.</string>
    <string name="list_of_property">List Your Property</string>
    <string name="Property_List">Property List</string>
    <string name="hpl_sales">HPL - North Shaser PRE SALES</string>
    <string name="clark_country">Clark Country, Washington</string>
    <string name="acres">Acres:</string>
    <string name="property_licence_terms">Licenses Term:</string>
    <string name="basic_plan">Digital management platform for small to medidum-\n sized landowners who are executing recreational \n access transactions. Limited to one-time agreements,renewed annually to the same group \n person each year.</string>
    <string name="pro_plan">For medium-sized private landowners and land \n management consultants wanting more flexibility in \n their recreational offerings, including the option to set \n daily access pricing.Comes with MOA on-boarding \n support.Ability to market recreational access to the \n public and offer up unique recreational activities.</string>
    <string name="july2022">July 1st, 2022 to June 20th, 2023</string>
    <string name="fouronefive">415</string>
    <string name="Mangement_and_store">Manage and store annual access agreement</string>
    <string name="dedicated_account">Dedicated account manager support</string>
    <string name="list_property_publicly">List property publicly</string>
    <string name="all_basic_plan_features">All Basic Plan features PLUS:</string>
    <string name="all_pro_plan_features">All Pro Plan features PLUS:</string>
    <string name="send_and_receive">Send and receive secure messages</string>
    <string name="accounting_support">Accounting support</string>
    <string name="offer_multiple_recreational_activities">Offer multiple recreational activities</string>
    <string name="on_boarding_support">On-boarding support</string>
    <string name="agreement_renewal_support">Agreement renewal support</string>
    <string name="secure_online">Secure Online Payments</string>
    <string name="full_system">Full system and data administration</string>
    <string name="offer_daily_access_pricing">Offer daily access pricing</string>
    <string name="direct_deposit">Direct deposit into your account</string>
    <string name="end_user">End user support</string>
    <string name="multiple_agreements">Multiple agreements</string>
    <string name="no_subscription">* No subsciption fee.Only payment transactions fees.</string>
    <string name="additional_subsciption">* Additional subsciption Fee.</string>
    <string name="view_details">View Details</string>
    <string name="Zoom_in">Zoom In</string>
    <string name="Zoom_out">Zoom Out</string>
    <string name="direction">Directions</string>
    <string name="enterprise_plan">A customized, comphrehensive recreational\n management system formajor landowners,complete \n with full MOA administration and tech support.Ideal for large-scale landowners, land management\n consultants, and land asset managers who need a \n complete enterprise system across multiple regions,\n as well as the ability to offer customized, diverse recreational activities. </string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="license_renewal">License Renewal</string>
    <string name="Please_login_first">Please login first to perform this action</string>
    <string name="Selected_property">Selected property not listed on the map </string>
    <string name="requested_date">Requested date:</string>
    <string name="firstjuly2022">July 1st, 2022</string>
    <string name="cass_taxas">Cass, Taxas</string>
    <string name="nfs_who">NFS - WH0013</string>
    <string name="lincese_now">Licence Now</string>
    <string name="dollar_456">$456.00</string>
    <string name="hpl_north_lic_desc">HPL - North Cascades Non-Motorized Permit\nTest Member Permit</string>
    <string name="property_details">Details</string>
    <string name="including_details">Including all amenities and other fees</string>
    <string name="skagit_country_washinton">Skagit County, Washington</string>
    <string name="propertyid">Property ID :</string>
    <string name="hpl_north">HPL - North Cascades</string>
    <string name="price">Price:</string>
    <string name="dollaramount_ln">$45,126.00</string>
    <string name="acres_size">786.00</string>
    <string name="license_start_date">License Start Date :</string>
    <string name="licence_date">August 2nd, 2022</string>
    <string name="license_end_date">License End Date :</string>
    <string name="licence_end_date2">August 2nd 2023</string>
    <string name="special_conditions">Special Conditions :</string>
    <string name="guidelines">Guidelines:</string>
    <string name="no_trapping">No Trapping.</string>
    <string name="no_hunting_w_dogs">No Hunting with Dogs.</string>
    <string name="road_trail">Road/Trail must be left open for public use.</string>
    <string name="walk_in_access">Walk-in access only</string>
    <string name="description">Description</string>
    <string name="description_lengthy">Hampton Family Forests - North Cascades permit area provides a wide spectrum of\n
        quality outdoor recreation including hunting, fishing, bicycling, hiking, photography,\n
        sightseeing, and more. The permit area includes 83,617 acres in several large blocks\n
        of property.
    </string>
    <string name="desc_lengthy">Hampton Family Forests - North Cascades permit area provides a wide spectrum of quality outdoor recreation including hunting, fishing, bicycling, hiking, photography, sightseeing, and more. The permit area includes 83,617 acres in several large blocks of property.</string>
    <string name="no_desc_lengthy"> No Property Description </string>
    <string name="amenitities">Amenities</string>
    <string name="property_on_Map">Property On Map</string>
    <string name="campsites">Campsites (s)</string>
    <string name="camp_dollar1">$156.00</string>
    <string name="test_amenity">Test Amenity</string>
    <string name="cabin">Cabin(s)</string>
    <string name="propert_attachments">Property Attachments</string>
    <string name="view_documents">View Documents</string>
    <string name="request_access">Request Temporary Access</string>
    <string name="questions">Questions ?</string>
    <string name="phone_contact"> -- </string>
    <string name="time">Timings:</string>
    <string name="contact_proprty_agent">Contact the Property Agent</string>
    <string name="eight_pm">8:00 PM - 5:00 AM M-F-EST</string>
    <string name="similr_prprties">Similar Properties</string>
    <string name="filter_by">Filter By:</string>
    <string name="permitts">Permits</string>
    <string name="rul">RLU</string>
    <string name="listview">List View</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="hpl_permit">HPL - North Cascades Non-Motorized Permit Test Member.</string>
    <string name="twofiftydollar">$250.45</string>
    <string name="permit_available">Permit Available 45</string>
    <string name="purchase">Purchase</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="email">Email</string>
    <string name="Tell_us_What">Tell us What Makes your Property Awesome</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="requested">REQUESTED</string>
    <string name="membership_permit">MEMBERSHIP PERMIT</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="membership_rlu">MEMBERSHIP RLU</string>
    <string name="pending_permit">PENDING PERMIT</string>
    <string name="pending_rlu">PENDING RLU</string>
    <string name="expired_rlu">EXPIRED RLU</string>
    <string name="email_address">Email Address</string>
    <string name="sold_out">SOLD OUT</string>
    <string name="text_message">Text Message\n xxx-xxx-7456</string>
    <string name="emails">Email\n a..r@cssoftsolutions.com</string>
</resources>