<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/llPermitGridItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivSeachImage"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_150sdp"
        android:padding="@dimen/_3sdp"
        android:scaleType="fitXY"
        android:src="@drawable/layer_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHplPermitHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_7sdp"
        android:ellipsize="end"
        android:text="@string/hpl_permit"
        app:layout_constraintStart_toEndOf="@+id/ivSeachImage"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tvPermitCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvHplPermitHead"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/clark_country"
        android:textColor="@color/home_screen_grey"
        app:layout_constraintStart_toEndOf="@+id/ivSeachImage"
        android:textSize="@dimen/_7ssp" />

    <TextView
        android:id="@+id/tvPermitAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@+id/tvPermitCountry"
        android:text="@string/permit_available"
        android:textColor="@color/green_border_button_color"
        android:textSize="@dimen/_7ssp"
        app:layout_constraintStart_toEndOf="@+id/ivSeachImage" />

    <TextView
        android:id="@+id/tvAdventureSeeker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="left"
        android:text="@string/property_licence_terms"
        app:layout_constraintTop_toBottomOf="@+id/tvPermitAvailable"
        app:layout_constraintStart_toEndOf="@+id/ivSeachImage"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp" />
    <TextView
        android:id="@+id/tvLiceseStartEndDate"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAdventureSeeker"
        android:fontFamily="@font/nunito_sans_semibold"
        app:layout_constraintTop_toBottomOf="@+id/tvAdventureSeeker"
        app:layout_constraintStart_toEndOf="@+id/ivSeachImage"
        android:text="@string/july2022"
        android:textColor="@color/home_screen_grey"
        android:textSize="@dimen/_6ssp" />

    <TextView
        android:id="@+id/tvPreApproval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPermitAvailable"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/tvLiceseStartEndDate"
        app:layout_constraintTop_toBottomOf="@+id/tvLiceseStartEndDate"
        android:layout_marginLeft="@dimen/_30sdp"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintStart_toEndOf="@+id/tvLiceseStartEndDate"
        android:gravity="right"
        android:text="@string/permit_available"
        android:textColor="@color/green_border_button_color"
        android:textSize="@dimen/_7ssp" />

    <TextView
        android:id="@+id/tvSoldOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPermitAvailable"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPreApproval"
        app:layout_constraintEnd_toEndOf="@+id/tvPreApproval"
        android:fontFamily="@font/nunito_sans_bold"
        android:gravity="right"
        android:text="@string/sold_out"
        android:textColor="@color/red_pre_approval"
        android:textSize="@dimen/_7ssp" />


    <TextView
        android:id="@+id/tvAcress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/tvSoldOut"
        app:layout_constraintEnd_toEndOf="@+id/tvSoldOut"
        android:text="@string/acres"
        android:layout_marginRight="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp" />


    <TextView
        android:id="@+id/tvPermitAcres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvAcress"
        app:layout_constraintEnd_toEndOf="@+id/tvAcress"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/fouronefive"
        android:layout_marginRight="@dimen/_5sdp"
        android:textColor="@color/home_screen_grey"
        android:textSize="@dimen/_6ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHorizontalList"
        android:layout_width="@dimen/_90sdp"
        app:layout_constraintStart_toEndOf="@+id/ivSeachImage"
        app:layout_constraintTop_toBottomOf="@+id/tvPermitAcres"
        android:layout_height="@dimen/_20sdp" />



    <TextView
        android:id="@+id/tvHplPermitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintTop_toBottomOf="@+id/tvPermitAcres"
        app:layout_constraintEnd_toEndOf="@+id/tvPermitAcres"
        android:text=""
        android:textColor="@color/green"
        android:textSize="@dimen/_8ssp" />

</androidx.constraintlayout.widget.ConstraintLayout>