<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/ilToolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/LargeBoldBlackTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="left"
        android:text="@string/forgot_password_" />

    <TextView
        android:id="@+id/tvForgetDesc"
        style="@style/SmallGreyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvForgotPassword"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_10ssp"
        android:gravity="left"
        android:text="@string/enter_your_email_for_the_verification_process" />

    <RelativeLayout
        android:layout_below="@+id/tvForgetDesc"
        style="@style/SignupLoginInputFields"
        android:layout_width="match_parent"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp">

        <ImageView
            android:id="@+id/imgMail"
            style="@style/SideLeftImageStyle"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:src="@drawable/ic_mail" />

        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@+id/imgMail"
            android:background="#F2F2F2" />

        <EditText
            android:id="@+id/edtEnterEmail"
            style="@style/MediumGreyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@+id/view1"
            android:layout_weight="6"
            android:background="@null"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvForgotPasswordLogin"
        style="@style/RoundCornerGreenLoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:padding="@dimen/_13sdp"
        android:text="@string/send_reset_link" />

</RelativeLayout>