<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llSearchHome"
            android:elevation="0.5dp"
            android:padding="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/corner_round_rectangle"
            android:orientation="vertical">


            <FrameLayout
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivSeachImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_weight="4"
                    android:clipToOutline="true"
                    android:background="@drawable/corner_round_rectangle"
                    android:scaleType="fitXY"
                    android:src="@drawable/layer_4" />

                <TextView
                    android:id="@+id/tvRequested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:elevation="@dimen/_1sdp"
                    android:visibility="gone"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:layout_gravity="left"
                    android:text="PERMIT"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/ic_green_tie"/>

            </FrameLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_weight="4"
                android:orientation="vertical">
            <LinearLayout
                android:id="@+id/llPermitHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHplPermitHead"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:gravity="left"
                    android:maxLines="2"
                    android:minLines="2"
                    android:ellipsize="end"
                    android:text="@string/hpl_permit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_7ssp" />

                <TextView
                    android:id="@+id/tvHplPermitPrice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/tvHplPermit"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/green"
                    android:textSize="@dimen/_8ssp" />
            </LinearLayout>

                <TextView
                    android:id="@+id/tvPermitCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llPermitHead"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/clark_country"
                    android:textColor="@color/home_screen_grey"
                    android:textSize="@dimen/_7ssp" />

                <TextView
                    android:id="@+id/tvPermitAvailable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPermitCountry"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/permit_available"
                    android:textColor="@color/green_border_button_color"
                    android:textSize="@dimen/_7ssp" />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/llLicencesTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAdventureSeeker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:gravity="left"
                        android:text="@string/property_licence_terms"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />


                    <TextView
                        android:id="@+id/tvLiceseStartEndDate"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAdventureSeeker"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/july2022"
                        android:textColor="@color/home_screen_grey"
                        android:textSize="@dimen/_6ssp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/llLicencesTerms"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_2sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:gravity="left"
                        android:text="@string/acres"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />


                    <TextView
                        android:id="@+id/tvPermitAcres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAdventureSeeker"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/fouronefive"
                        android:textColor="@color/home_screen_grey"
                        android:textSize="@dimen/_6ssp" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvSoldOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPermitAvailable"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:gravity="right"
                android:text="@string/sold_out"
                android:textColor="@color/red_pre_approval"
                android:textSize="@dimen/_7ssp" />


            <TextView
                android:id="@+id/tvPreApproval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPermitAvailable"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:gravity="right"
                android:text="@string/permit_available"
                android:textColor="@color/green_border_button_color"
                android:textSize="@dimen/_7ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHorizontalList"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llSearchHome"
            android:visibility="gone"
            android:background="@drawable/green_border_shape"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/_9ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_11sdp"
                android:fontFamily="@font/nunito_sans_bold"
                android:gravity="center"
                android:text="@string/purchase"
                android:textColor="@color/green_border_button_color" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>